fix: change sizes for charts by correct view on small width screen (Sat 14.12.24 01:58 PM)

--- a/src/styles/components/_exp.scss
+++ b/src/styles/components/_exp.scss
@@ -25,7 +25,6 @@
             justify-content: center;
             align-items: center;
 
-
             &-title {
                 font-size: 20px !important;
                 font-weight: 400 !important;
@@ -33,8 +32,8 @@
             }
 
             &-element {
-                width: 40vw;
-                height: min(650px, 40vw);
+                width: min(650px, 70vw);
+                height: min(650px, 60vw);
             }
 
             @media (max-width:1366px) {}
